<resources>
    <string name="app_name">E-Commerce</string>
    <string name="cart">cart</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_user">Enter User</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_pass">Enter Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_contact">Enter Contact</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="get_pass">Get Password</string>
    <string name="login_now">Login Now</string>
    <string name="nav_open">Nav Open</string>
    <string name="nav_close">Nav Close</string>
    <string name="name">Name</string>
    <string name="select_image">Select Image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="main_fragment">Main Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="decrease">-</string>
    <string name="delete">Delete</string>
    <string name="increase">+</string>
    <string name="_0">0</string>
    <string name="product_description">Product Description</string>
    <string name="update">Update</string>
    <string name="add_to_cart">Add to Cart</string>

</resources>