<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/product_image"
        android:orientation="vertical">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/product_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/product_description"
            android:inputType="textMultiLine"
            android:lines="3" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/price"
            android:inputType="number" />

        <Spinner
            android:id="@+id/product_category"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="8dp" />

        <Button
                android:id="@+id/save_product_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/colorPrimaryDark"/>

        <Button
            android:id="@+id/update_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/update"
            android:visibility="gone" />

        <Button
                android:id="@+id/cancel_product_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:background="@drawable/btn_rounded"
                android:backgroundTint="@color/colorPrimaryDark"/>
    </LinearLayout>

</RelativeLayout>