<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardElevation="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/product_name"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/product_name"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:id="@+id/product_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textAlignment="center"
            android:id="@+id/product_price"
            android:layout_below="@+id/product_image"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/product_description"
            android:layout_below="@+id/product_price"
            android:text="@string/description"
            android:textAlignment="center"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>
