<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/cart_item_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_item_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/cart_item_img"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="3"
            android:lines="3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_item_price"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_name"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/cart_item_img"/>

    <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_from_cart_btn"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            style="@style/Widget.AppCompat.Button"/>

    <Button
            android:text="@string/decrease"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/decrease_amount_btn"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_price"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/cart_item_price"/>

    <TextView
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cart_item_amount"
            app:layout_constraintStart_toEndOf="@+id/decrease_amount_btn"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/decrease_amount_btn"
            app:layout_constraintBottom_toBottomOf="@+id/decrease_amount_btn"
            android:textSize="30sp"/>

    <Button
            android:text="@string/increase"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/increase_amount_btn"
            app:layout_constraintTop_toBottomOf="@+id/cart_item_price"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/cart_item_amount"
            android:layout_marginStart="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>